Add AFT22 traits, implementations and exemples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ std = [
     # OpenBrush dependency
     "openbrush/std",
 ]
-aft34 = [
-    "openbrush/psp34"
-]
+aft22 = []
+aft34 = []
+
 ink-as-dependency = []
