--- a/examples/aft34_extensions/payable_mint/Cargo.toml
+++ b/examples/aft34_extensions/payable_mint/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "my_aft22"
+name = "my_aft34_payable_mint"
 version = "0.1.0"
 authors = ["Allfeat labs <tech@allfeat.com>"]
 edition = "2021"
@@ -15,14 +15,14 @@ scale-info = { version = "2.6", default-features = false, features = [
 ], optional = true }
 
 # These dependencies
-allfeat-contracts = { path = "../..", default-features = false, features = [
-    "aft22",
+allfeat-contracts = { path = "../../..", default-features = false, features = [
+    "aft34",
 ] }
 openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", tag = "4.0.0", default-features = false }
 
 [dev-dependencies]
 ink_e2e = "4.3.0"
-test_helpers = { path = "../test_helpers", default-features = false }
+test_helpers = { path = "../../test_helpers", default-features = false }
 
 [lib]
 path = "src/lib.rs"
